@@ -40,12 +40,14 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <version.cxf>3.1.0</version.cxf>
-    <version.slf4j>1.7.1</version.slf4j>
-    <version.olingo>2.0.10</version.olingo>
-    <version.springframework>3.2.14.RELEASE</version.springframework>
+    <version.commonscodec>1.10</version.commonscodec>
     <version.commonsdbcp>1.4</version.commonsdbcp>
+    <version.commonslang>3.7</version.commonslang>
+    <version.cxf>3.1.0</version.cxf>
     <version.denodovdpjdbcdriver>6.0.10</version.denodovdpjdbcdriver>
+    <version.olingo>2.0.10</version.olingo>
+    <version.slf4j>1.7.1</version.slf4j>
+    <version.springframework>3.2.14.RELEASE</version.springframework>
     <classifier.denodovdpjdbcdriver>full</classifier.denodovdpjdbcdriver>
   </properties>
 
@@ -175,7 +177,7 @@
     <dependency>
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
-        <version>1.10</version>
+        <version>${version.commonscodec}</version>
     </dependency>
 
     <dependency>
@@ -266,7 +268,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.3.2</version>
+      <version>${version.commonslang}</version>
     </dependency>
 
     <dependency>
