@@ -5,6 +5,7 @@ Fix #36983 - Clean META-INF resources in distributions
 Fix #37021 - Replace Log4j by SLF4J
 Fix #36960 - User names should be quoted in CONNECT statements
 Fix #37044 - Error accessing the root of the OData 2 Service
+Fix #37067 - Filter queries using decimal and doubles literals are not being properly delegated to VDP
 
 20180312
 ---------------
